--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "15.4.2",
     "react-apollo": "^0.8.1",
     "react-native": "0.40.0",
-    "react-native-oauth": "^2.1.11"
+    "react-native-oauth": "^2.1.11",
+    "react-native-router-flux": "^3.37.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
