--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "react-native": "0.40.0",
     "react-native-oauth": "^2.1.11",
     "react-native-router-flux": "^3.37.0",
+    "react-redux": "^5.0.2",
     "redux-actions": "^1.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
-    "babel-preset-react-native": "1.9.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-function-bind": "^6.22.0",
+    "babel-preset-react-native": "1.9.1",
     "jest": "18.1.0",
     "react-test-renderer": "15.4.2"
   },
